--- a/global_app/templates/group-by.html
+++ b/global_app/templates/group-by.html
@@ -453,7 +453,7 @@ $(document).ready(function () {
           {% endif %}
         {% endfor %}
     {% if "deal_id" in columns %}
-    <td><a class="btn btn-small" href="/get-the-detail/{{ group_slug }}/{{ name|slugify }}/{{ item.deal_id }}/">Details</a></td>
+    <td><a href="/get-the-detail/{{ group_slug }}/{{ name|slugify }}/{{ item.deal_id }}/" class="btn btn-small">Details</a></td>
     {% endif %}
     </tr>
     {% endfor %}
