set template variable cms_page and partially use them in templates

--- a/global_app/templates/group-by.html
+++ b/global_app/templates/group-by.html
@@ -9,11 +9,11 @@
 {% block breadcrumb %}
 <ul class="breadcrumb">
   <li><a href="/">Home</a> <span class="divider">|</span></li>
-  <li><a href="/get-the-detail/">Get the detail</a> <span class="divider">|</span></li>
+  <li><a href="/{{cms_page}}/">Get the detail</a> <span class="divider">|</span></li>
   {% if group == "all" %}
   <li>{{ name|capfirst }}</li>
   {% elif filters.group_value %}
-  <li><a href="/get-the-detail/{{ group_slug }}/?{% add_or_update_param request.GET 'order_by' '' %}">By {{ group }}</a> <span class="divider">|</span></li>
+  <li><a href="/{{cms_page}}/{{ group_slug }}/?{% add_or_update_param request.GET 'order_by' '' %}">By {{ group }}</a> <span class="divider">|</span></li>
   <li>{{ name }}</li>
   {% else %}
   <li>By {{ group }}</li>
@@ -321,12 +321,12 @@ $(document).ready(function () {
         <tr class="{% if forloop.counter|divisibleby:2 %}even{% else %}odd{% endif %}">
         {% for column in columns %}
           {% if column == "deal_id" %}
-            <td class="deal-id"><a href="/get-the-detail/{{ group_slug }}/{{ name|slugify }}/{{ item.deal_id }}/">{{ item.deal_id }}</a></td>
+            <td class="deal-id"><a href="/{{cms_page}}/{{ group_slug }}/{{ name|slugify }}/{{ item.deal_id }}/">{{ item.deal_id }}</a></td>
           {% elif column == "crop" %}
               <td style="width:341px">
               {% if  item.crop %}
               {% for c in item.crop %}
-                <a href="/get-the-detail/by-crop/{{ c|slugify }}/">{{ c }}</a></br>
+                <a href="/{{cms_page}}/by-crop/{{ c|slugify }}/">{{ c }}</a></br>
               {% endfor %}
               {% else %}{% trans "unknown" %}
               {% endif %}
@@ -336,7 +336,7 @@ $(document).ready(function () {
               <ul class="unstyled">
               {% if item.intention %}
                 {% for i in item.intention %}
-                  <li><a href="/get-the-detail/by-intention/{{ i|slugify }}/?{% add_or_update_param request.GET 'order_by' '' %}" {% if group != "intention" %}class="intention-icon {{ i|slugify }}" data-content="{{ i }}"{% endif %}><span>{{ i }}</span></a></li>
+                  <li><a href="/{{cms_page}}/by-intention/{{ i|slugify }}/?{% add_or_update_param request.GET 'order_by' '' %}" {% if group != "intention" %}class="intention-icon {{ i|slugify }}" data-content="{{ i }}"{% endif %}><span>{{ i }}</span></a></li>
                 {% endfor %}
               {% else %}{% trans "unknown" %}
               {% endif %}
@@ -355,7 +355,7 @@ $(document).ready(function () {
             <td style="width:183px">
             {% if item.investor_name %}
                 {% for i in item.investor_name %}
-                  <a href="/get-the-detail/by-investor-name/{{i.id}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ i.name }}</a><br/>
+                  <a href="/{{cms_page}}/by-investor-name/{{i.id}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ i.name }}</a><br/>
                 {% endfor %}
             {% else %}{% trans "unknown" %}
             {% endif %}
@@ -364,7 +364,7 @@ $(document).ready(function () {
             <td class="investor-country">
               {% if item.investor_country %}
               {% for investor_country  in item.investor_country %}
-                <a href="/get-the-detail/by-investor-country/{{investor_country|slugify}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ investor_country }}</a><br/>
+                <a href="/{{cms_page}}/by-investor-country/{{investor_country|slugify}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ investor_country }}</a><br/>
               {% endfor %}
               {% else %}{% trans "unknown country" %}{% endif %}
             </td>
@@ -372,7 +372,7 @@ $(document).ready(function () {
             <td class="investor-region">
               {% if item.investor_region %}
               {% for investor_region  in item.investor_region %}
-                <a href="/get-the-detail/by-investor-region/{{investor_region|slugify}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ investor_region }}</a><br/>
+                <a href="/{{cms_page}}/by-investor-region/{{investor_region|slugify}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ investor_region }}</a><br/>
               {% endfor %}
               {% else %}{% trans "unknown region" %}{% endif %}
             </td>
@@ -380,7 +380,7 @@ $(document).ready(function () {
             <td>
               {% if item.target_country %}
               {% for target_country  in item.target_country %}
-                <a href="/get-the-detail/by-target-country/{{target_country|slugify}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ target_country }}</a><br/>
+                <a href="/{{cms_page}}/by-target-country/{{target_country|slugify}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ target_country }}</a><br/>
               {% endfor %}
               {% else %}
                 {% trans "unknown" %}
@@ -390,7 +390,7 @@ $(document).ready(function () {
             <td>
               {% if item.target_region %}
                 {% for target_region  in item.target_region %}
-                    <a href="/get-the-detail/by-target-region/{{target_region|slugify}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ target_region }}</a><br/>
+                    <a href="/{{cms_page}}/by-target-region/{{target_region|slugify}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ target_region }}</a><br/>
                 {% endfor %}
               {% else %}
                 {% trans "unknown" %}
@@ -399,7 +399,7 @@ $(document).ready(function () {
           {% elif column == "year" %}
             <td>
               {% if item.year %}
-                <a href="/get-the-detail/by-year/{{item.year}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ item.year }}</a>
+                <a href="/{{cms_page}}/by-year/{{item.year}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ item.year }}</a>
               {% else %}
                 {% trans "unknown" %}
               {% endif %}
@@ -408,7 +408,7 @@ $(document).ready(function () {
             <td>
               {% if item.data_source_type %}
               {% for data_source_type in item.data_source_type %}
-                <a href="/get-the-detail/by-data-source-type/{{data_source_type|slug_and_slash_to_plus}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ data_source_type }}</a>
+                <a href="/{{cms_page}}/by-data-source-type/{{data_source_type|slug_and_slash_to_plus}}/?{% add_or_update_param request.GET 'order_by' '' %}">{{ data_source_type }}</a>
               {% endfor %}
               {% else %}
                 {% trans "unknown" %}
@@ -453,7 +453,7 @@ $(document).ready(function () {
           {% endif %}
         {% endfor %}
     {% if "deal_id" in columns %}
-    <td><a href="/get-the-detail/{{ group_slug }}/{{ name|slugify }}/{{ item.deal_id }}/" class="btn btn-small">Details</a></td>
+    <td><a href="/{{cms_page}}/{{ group_slug }}/{{ name|slugify }}/{{ item.deal_id }}/" class="btn btn-small">Details</a></td>
     {% endif %}
     </tr>
     {% endfor %}
