--- a/templates/1-column.html
+++ b/templates/1-column.html
@@ -7,6 +7,11 @@
 <div class="row">
     <div class="span12">
         {% placeholder "Content" %}
-   </div>
+    </div>
+    <div class="sidebar">
+        {% placeholder "sidebar" %}
+    </div>
+
+
 </div>
 {% endblock %}
