--- a/chart_view/templates/plugins/animal.html
+++ b/chart_view/templates/plugins/animal.html
@@ -1,10 +1,2 @@
 <h1>{{ instance.animal.name }}</h1>
-
-<form action="{% url 'polls:vote' instance.poll.id %}" method="post">
-    {% csrf_token %}
-    {% for choice in instance.poll.choice_set.all %}
-        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
-        <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
-    {% endfor %}
-    <input type="submit" value="Vote" />
-</form>
+<p>Toy plugin for testing how django CMS plugins work</p>
