--- a/templates/base-djangocms-stock.html
+++ b/templates/base-djangocms-stock.html
@@ -26,6 +26,7 @@
             }
         </style>
         {% render_block "css" %}
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     </head>
     <body>
         {% cms_toolbar %}
