--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,4 +1,5 @@
 {% load i18n menu_tags cms_tags %}
+<!-- base menu -->
 {% for child in children %}
   <li>
     <a class="{{ child.get_menu_title|slugify }} toggle-tooltip bottom"
