--- a/maplandmatrix/static/css/style.css
+++ b/maplandmatrix/static/css/style.css
@@ -14,3 +14,17 @@
     background-opacity: 0.5;
 }
 
+.popover-title {
+    background-color: #f7f7f7;
+    border-bottom: 1px solid #ebebeb;
+    border-radius: 5px 5px 0 0;
+    font-size: 14px;
+    margin: 0;
+    padding: 8px 14px;
+    text-align: center;
+}
+
+p {
+    margin: 0;
+    padding: 2px 2px;
+}
