--- a/maplandmatrix/templates/index.html
+++ b/maplandmatrix/templates/index.html
@@ -26,15 +26,18 @@
 	<script>
 	//define Features for the MARKERS
 	$(document).ready(function() {
-		//$.get("/api/activity-attribute-list", function (data) {
-		//	for (var marker in data) {
-		//		addClusteredMarker(marker.point_lon, marker.point_lat, marker.intention);
-		//	}
-		//});  
+/*
+		$.get("/en/api/deals.json?limit=200", function (data) {
+			for (var i = 0; i < data.length; i++) {
+				marker = data[i];
+				console.log(marker.point_lon, marker.point_lat, "marker.intention");
+				addClusteredMarker(marker.point_lon, marker.point_lat, "marker.intention");
+			}
+		});
+*/
 		{% for ActivityAttribute in ActivityAttribute_list %}
 			addClusteredMarker({{ ActivityAttribute.point_lon }}, {{ ActivityAttribute.point_lat }}, "{{ ActivityAttribute.intention}}");
-			//console.log({{ ActivityAttribute.intention }});
-		{% endfor %}  
+		{% endfor %}
 	});
 	</script>
 	
