--- a/global_app/templates/deal-detail.html
+++ b/global_app/templates/deal-detail.html
@@ -16,8 +16,8 @@
   </style>
 
   {# map #}
-  <script src="/media/js/editor/map.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=en"></script>
+  {# <script src="/media/js/editor/map.js" type="text/javascript" charset="utf-8"></script> #}
+  {# <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=en"></script> #}
 {% endblock %}
 
 {% block page_title %}Deal details{% endblock %}
@@ -381,6 +381,70 @@
   {% else %}
 
     <p>There are currently no deals matching your search criteria. <a href="/public/">Add a deal</a>.</p>
+
+  {% endif %}
+
+  {% if forms %}
+
+    <table>
+
+      {% for form in forms %}
+
+        <tr><td>
+
+          {% if form.forms %}
+
+            formset: {{ form }}
+
+            {% if form.forms.0.has_investor %}
+              <tr><td>Primary investor</td><td>{{ investor.primary_investor }}</td></tr>
+              {% for i in investor.secondary_investors %}
+                <tr><td>Secondary investor</td><td>{{i.investor_name}} - {{i.country}}</td></tr>
+              {% endfor %}
+
+            {% else %} {# form.forms.0.has_investor #}
+
+              {% for form in form.forms %}
+                {% for field in form %}
+                  {% if field.value and field.label %}
+                    {% if "Latitude" in field.label %}
+                      <tr style="display:none"><td></td><td><input class="point_lat" type="hidden" value="{{field.value}}"></td></tr>
+                    {% elif "Longitude" in field.label %}
+                      <tr style="display:none"><td></td><td><input class="point_lon" type="hidden" value="{{field.value}}"></td></tr>
+                    {% elif "Location" in field.label %}
+                      <tr><td>Location</td><td>{{field|safe}}</td></tr>
+                    {% elif "URL" in field.label %}
+                      <tr><td style="border-top: none">URL</td><td style="border-top: none">{% for v in field.value|ensure_list %}<a target="_blank" href='{{ v }}'>{{ v|truncatechars:55 }}</a>{% endfor %}</td></tr>
+                    {% elif "Date" in field.label %}
+                      <tr><td style="border-top: none">Date</td><td style="border-top: none">{{field.value}}</td></tr>
+                    {% else %}
+                      <tr><td>{{ field.label }}</td><td>{{ field.value|ensure_list|display_values:field.field|join:"<br />" }}</td></tr>
+                    {% endif %}
+                  {% endif %}
+                {% endfor %}
+              {% endfor %}
+
+            {% endif %} {# form.forms.0.has_investor #}
+
+          {% else %} {# form.forms #}
+
+              {% for field in form %}
+
+                  {{ field }}
+
+                  {% if field.value and field.label %}
+                      <tr><td>{{ field.label }}</td><td>{{ field.value|ensure_list|display_values:field.field|join:"<br />" }}</td></tr>
+                  {% endif %}
+
+              {% endfor %}
+
+          {% endif %}  {# form.forms #}
+
+        </td></tr>
+
+      {% endfor %}
+
+    </table>
 
   {% endif %}
 
