--- a/global_app/templates/deal-detail.html
+++ b/global_app/templates/deal-detail.html
@@ -40,6 +40,102 @@
     <div class="bs-example">
       <div class="panel-group" id="accordion">
 
+        {% if forms %}
+
+          {% for form in forms %}
+
+            <div class="panel panel-default">
+
+              {% if form.forms %}
+
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{forloop.counter}}">
+                      Formset {{forloop.counter}}: {#{ form }#}
+                    </a>
+                  </h4>
+                </div>
+
+                <div id="collapse{{forloop.counter}}" class="panel-collapse collapse in">
+                  <div class="panel-body">
+                    <table class="i-dont-know-how-to-do-this-in-css-yes-i-know-booh">
+
+                      {% if form.forms.0.has_investor %}
+                        <tr><td>Primary investor</td><td>{{ investor.primary_investor }}</td></tr>
+                        {% for i in investor.secondary_investors %}
+                          <tr><td>Secondary investor</td><td>{{i.investor_name}} - {{i.country}}</td></tr>
+                        {% endfor %}
+
+                      {% else %}    {# form.forms.0.has_investor #}
+
+                        {% for form in form.forms %}
+                          {% for field in form %}
+                            {% if field.value and field.label %}
+                              {% if "Latitude" in field.label %}
+                                <tr style="display:none"><td></td><td><input class="point_lat" type="hidden" value="{{field.value}}"></td></tr>
+                              {% elif "Longitude" in field.label %}
+                                <tr style="display:none"><td></td><td><input class="point_lon" type="hidden" value="{{field.value}}"></td></tr>
+                              {% elif "Location" in field.label %}
+                                <tr><td>Location</td><td>{{field|safe}}</td></tr>
+                              {% elif "URL" in field.label %}
+                                <tr><td style="border-top: none">URL</td><td style="border-top: none">{% for v in field.value|ensure_list %}<a target="_blank" href='{{ v }}'>{{ v|truncatechars:55 }}</a>{% endfor %}</td></tr>
+                              {% elif "Date" in field.label %}
+                                <tr><td style="border-top: none">Date</td><td style="border-top: none">{{field.value}}</td></tr>
+                              {% else %}
+                                <tr><td>{{ field.label }}</td><td>{{ field.value|ensure_list|display_values:field.field|join:"<br />" }}</td></tr>
+                              {% endif %}
+                            {% endif %}
+                          {% endfor %}
+                        {% endfor %}
+
+                      {% endif %}   {# form.forms.0.has_investor #}
+                    </table>
+                  </div>
+                </div>
+
+              {% else %}      {# form.forms #}
+
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{forloop.counter}}">
+                      Form {{forloop.counter}}: {#{ form }#}
+                    </a>
+                  </h4>
+                </div>
+
+                <div id="collapse{{forloop.counter}}" class="panel-collapse collapse in">
+                  <div class="panel-body">
+                    <table class="i-dont-know-how-to-do-this-in-css-yes-i-know-booh">
+
+                      {% for field in form %}
+
+                        <tr>
+                        {# <td>Field:</td><td>{{ field }}</td> #}
+
+                        {#% if field.value %#}
+                        {#  <td>{{ field.label }}</td><td>{{ field.value|ensure_list|display_values:field.field|join:"<br />" }}</td> #}
+                        {#% else %#}
+                          <td>{{ field.label }}</td><td>{{ field }}</td>
+                        {#% endif %#}
+
+                        </tr>
+
+                      {% endfor %}
+
+                    </table>
+                  </div>
+                </div>
+
+              {% endif %}     {# form.forms #}
+
+            </div>            {# class="panel panel-default" #}
+
+          {% endfor %}
+
+        {% endif %}           {# forms #}
+
+{#% comment %#}
+
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
@@ -67,6 +163,9 @@
             </div>
           </div>
         </div>
+
+{#% endcomment %#}
+
 {% comment %}
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -382,75 +481,6 @@
   {% else %}
 
     <p>There are currently no deals matching your search criteria. <a href="/public/">Add a deal</a>.</p>
-
-  {% endif %}
-
-  {% if forms %}
-
-    <table>
-
-      {% for form in forms %}
-
-          {% if form.forms %}
-
-            formset: {{ form }}
-
-            {% if form.forms.0.has_investor %}
-              <tr><td>Primary investor</td><td>{{ investor.primary_investor }}</td></tr>
-              {% for i in investor.secondary_investors %}
-                <tr><td>Secondary investor</td><td>{{i.investor_name}} - {{i.country}}</td></tr>
-              {% endfor %}
-
-            {% else %} {# form.forms.0.has_investor #}
-
-              {% for form in form.forms %}
-                {% for field in form %}
-                  {% if field.value and field.label %}
-                    {% if "Latitude" in field.label %}
-                      <tr style="display:none"><td></td><td><input class="point_lat" type="hidden" value="{{field.value}}"></td></tr>
-                    {% elif "Longitude" in field.label %}
-                      <tr style="display:none"><td></td><td><input class="point_lon" type="hidden" value="{{field.value}}"></td></tr>
-                    {% elif "Location" in field.label %}
-                      <tr><td>Location</td><td>{{field|safe}}</td></tr>
-                    {% elif "URL" in field.label %}
-                      <tr><td style="border-top: none">URL</td><td style="border-top: none">{% for v in field.value|ensure_list %}<a target="_blank" href='{{ v }}'>{{ v|truncatechars:55 }}</a>{% endfor %}</td></tr>
-                    {% elif "Date" in field.label %}
-                      <tr><td style="border-top: none">Date</td><td style="border-top: none">{{field.value}}</td></tr>
-                    {% else %}
-                      <tr><td>{{ field.label }}</td><td>{{ field.value|ensure_list|display_values:field.field|join:"<br />" }}</td></tr>
-                    {% endif %}
-                  {% endif %}
-                {% endfor %}
-              {% endfor %}
-
-            {% endif %} {# form.forms.0.has_investor #}
-
-          {% else %} {# form.forms #}
-
-            <tr><td>Form:</td></tr>
-
-            {% for field in form %}
-
-              <tr>
-              <td>Field:</td><td>{{ field }}</td>
-
-              {% if field.value and field.label %}
-                <td><strong>Value and Label:</strong></td>
-                </tr><tr><td></td>
-                <td>{{ field.label }}</td><td>{{ field.value|ensure_list|display_values:field.field|join:"<br />" }}</td>
-              {% else %}
-                <td>Label: {{ field.label }}</td><td>Value: {{ field.value }}</td>
-              {% endif %}
-
-              </tr>
-
-            {% endfor %}
-
-          {% endif %}  {# form.forms #}
-
-      {% endfor %}
-
-    </table>
 
   {% endif %}
 
